--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lampa</title>
 
+    <meta name="referrer" content="never">
+    
     <link rel="stylesheet" href="./vender/scrollbar/jquery.scrollbar.css">
     <link rel="stylesheet" href="./vender/keypad/style.css">
 
@@ -17,7 +19,7 @@
 
     </div>
     
-
+    <script src="webOSTVjs-1.2.4/webOSTV.js"></script>
     <script src="./vender/jquery/jquery.js"></script>
     <script src="./vender/notify/notify.js"></script>
     <script src="./vender/scrollbar/jquery.scrollbar.js"></script>
@@ -25,6 +27,6 @@
     <script src="./vender/keypad/keypad.js"></script>
     <script src="http://www.youtube.com/iframe_api"></script>
 
-    <script src="app.js"></script>
+    <script src="app.min.js"></script>
 </body>
 </html>
