--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <script src="./vender/keypad/keypad.js"></script>
     <script src="http://www.youtube.com/iframe_api"></script>
 
-    <script src="app.min.js"></script>
+    <script src="app.min.js?v=1.29928373"></script>
 </body>
 </html>
