Fix and add webos lib

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     </div>
     
-    <script src="webOSTVjs-1.2.4/webOSTV.js"></script>
+    <script src="./webos/webOSTV.js"></script>
     <script src="./vender/jquery/jquery.js"></script>
     <script src="./vender/notify/notify.js"></script>
     <script src="./vender/scrollbar/jquery.scrollbar.js"></script>
