--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="./vender/keypad/style.css">
 
     <link rel="stylesheet" href="css/app.css?v=2.83">
+    
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="welcome"></div>
