--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Lampa</title>
+    <title>Lampa - Каталог фильмов и сериалов</title>
+
+    <meta name="description" content="Приложение для просмотра каталога фильмов и сериалов на телевизорах, приставках и смартфонах." />
+
+    <meta property="og:title" content="Lampa - Каталог фильмов и сериалов">
+    <meta property="og:description" content="Приложение для просмотра каталога фильмов и сериалов на телевизорах, приставках и смартфонах.">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image" content="og.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
