Change domain and add HTTPS

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script src="./vender/scrollbar/jquery.scrollbar.js"></script>
     <script src="./vender/navigator/navigator.js"></script>
     <script src="./vender/keypad/keypad.js"></script>
-    <script src="http://www.youtube.com/iframe_api" async></script>
+    <script src="//www.youtube.com/iframe_api" async></script>
 
     <script>
     function putScript(scripts){
