--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
     <script src="./vender/scrollbar/jquery.scrollbar.js"></script>
     <script src="./vender/navigator/navigator.js"></script>
     <script src="./vender/keypad/keypad.js"></script>
-    <script src="//www.youtube.com/iframe_api" async></script>
 
     <script>
     function putScript(scripts){
@@ -93,5 +92,8 @@
 
     putScript('app.min.js?v=' + Math.random());
     </script>
+
+    <script src="//www.youtube.com/iframe_api" async></script>
+    <script src="//js.sentry-cdn.com/6e63d90a0fc743f3a4bc219d9849fc62.min.js" crossorigin="anonymous" async></script>
 </body>
 </html>
