--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <link rel="stylesheet" href="css/app.css?v=4.41">
 </head>
 <body>
+    <script>
+        window.youtube_lazy_load = true
+    </script>
+
     <div class="welcome"></div>
 
     <div id="app">
@@ -92,7 +96,5 @@
 
     putScript('app.min.js?v=' + Math.random());
     </script>
-
-    <script src="//www.youtube.com/iframe_api" async></script>
 </body>
 </html>
