--- a/index.html
+++ b/index.html
@@ -53,48 +53,109 @@
     <script src="./vender/keypad/keypad.js"></script>
 
     <script>
-    function putScript(scripts){
-        var add = function(src){
-            console.log('Loader', 'try-load-script', src)
-
-            var trys = 0;
-
-            var sreateScript = function(){
-                var script = document.createElement('script');
-
-                script.type = 'text/javascript';
-
-                script.onload = script.onreadystatechange = function() {
-                    console.log('Loader', 'Script loaded');
-                };
-
-                script.onerror = function(){
-                    trys++;
-
-                    console.log('Loader', 'error-load-script', src)
-
-                    if(trys < 3){
-                        sreateScript();
-                    }
-                    else{
-                        $('.no-network').removeClass('hide')
-
-                        $('.no-network__file').text(window.location.href + '/' + src)
-                    }
-                }
-
-                script.src = src;
-
-                document.getElementsByTagName('body')[0].appendChild(script);
+        var lampa_url     = 'https://yumata.github.io/lampa/';
+        var cache_version = Math.floor((new Date()).getTime() / 9e5); // Новое значение каждые 15 минут
+            
+        function URL(base, add) {
+            if (base.charAt(base.length - 1) !== '/') {
+                base += '/'
             }
 
-            sreateScript();
+            return base + add
         }
 
-        add(scripts);
-    }
+        function putScript(scripts, onload, onerror){
+            var add = function(src){
+                console.log('Loader', 'try-load-script', src)
 
-    putScript('app.min.js?v=' + Math.random());
+                var trys = 0
+
+                var sreateScript = function(){
+                    var script = document.createElement('script')
+
+                    script.type = 'text/javascript'
+
+                    script.onload = script.onreadystatechange = function(e) {
+                        console.log('Loader', 'Script loaded', e)
+
+                        if (!!onload) onload()
+                    };
+
+                    script.onerror = function(){
+                        trys++
+
+                        console.log('Loader', 'error-load-script', src)
+
+                        if(trys < 3){
+                            sreateScript()
+                        } else if (!!onerror) {
+                            onerror()
+                        } else{
+                            $('.no-network').removeClass('hide')
+
+                            $('.no-network__file').text(window.location.href + '/' + src)
+                        }
+                    }
+
+                    script.src = src
+
+                    document.getElementsByTagName('body')[0].appendChild(script)
+                }
+
+                sreateScript()
+            }
+
+            add(scripts)
+        }
+
+        function loadCurrentLampa() {
+            putScript('app.min.js?v=' + cache_version, function () {})
+        }
+
+        function loadLocalLampa(){
+            if(lampa_url !== '') window.local_lampa = true
+
+            loadCurrentLampa()
+        }
+
+        if (typeof AndroidJS !== "undefined"
+            && !!AndroidJS.getLampaURL
+            && /^https?:\/\//i.test(AndroidJS.getLampaURL())
+            && !/^https?:\/\//i.test(location.href)
+        ) {
+            lampa_url = URL(AndroidJS.getLampaURL(),'')
+        }
+
+        if (lampa_url !== '') {
+            putScript(
+                URL(lampa_url, 'app.min.js?v=' + cache_version),
+                function () {
+                    var css = URL(lampa_url, 'css/app.css?v=' + cache_version)
+
+                    $('head').append('<link rel="stylesheet" href="' + css + '">')
+                },
+                function () {
+                    putScript(
+                        URL(lampa_url, 'lampa-main/app.min.js?v=' + cache_version),
+                        function () {
+                            var css = URL(lampa_url, 'lampa-main/css/app.css?v=' + cache_version)
+
+                            $('head').append('<link rel="stylesheet" href="' + css + '">')
+
+                            putScript(
+                                URL(lampa_url, 'lampainit.js?v=' + cache_version),
+                                false,
+                                function(){}
+                            )
+                        },
+                        loadLocalLampa
+                    )
+                }
+            )
+        }
+        else{
+            loadCurrentLampa()
+        }
     </script>
 </body>
 </html>
