--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="./vender/keypad/keypad.js"></script>
 
     <script>
-        var lampa_url     = 'https://yumata.github.io/lampa/';
+        var lampa_url     = '';
         var cache_version = Math.floor((new Date()).getTime() / 9e5); // Новое значение каждые 15 минут
             
         function URL(base, add) {
